Complete implementation of TurnHandler